--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,13 +5,13 @@ branches:
   - master
 
 #os: Windows Server 2012 R2
-platform: Any CPU
+#platform: Any CPU
 
 clone_folder: c:\gopath\src\github.com\sait\tddexample
 
 environment:
   GOPATH: c:\gopath
-  GOVERSION: 1.7
+  #GOVERSION: 1.7
 
 install:
   - echo %PATH%
@@ -31,5 +31,5 @@ notifications:
       to:
         - gerardo@saitenlinea.com
         - andres.robledo@saitenlinea.com
-      subject: 'CI Build {{status}} {{commitId}}'
+      subject: 'CI Build TDDEXAMPLE {{status}} {{commitId}}'
       message: "Hola, {{message}}, {{commitId}}, ..."
